# netconfigops_ansible

./: .gitignore  LICENSE  README.md  ansible.cfg  mkdocs.yml  pyproject.toml
ansible_collections/ryanmerolle/netconfigops/: README.md  galaxy.yml
ansible_collections/ryanmerolle/netconfigops/meta/: runtime.yml
ansible_collections/ryanmerolle/netconfigops/plugins/: README.md
ansible_collections/ryanmerolle/netconfigops/plugins/filter/: README.md  hier_config.py  netutils.py
ansible_collections/ryanmerolle/netconfigops/roles/apply_config/defaults/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/apply_config/handlers/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/apply_config/tasks/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/apply_config/tests/: test.yml
ansible_collections/ryanmerolle/netconfigops/roles/apply_config/vars/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_backout/defaults/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_backout/handlers/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_backout/tasks/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_backout/tests/: test.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_backout/vars/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_diff/defaults/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_diff/handlers/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_diff/tasks/: main.yml
ansible_collections/ryanmerolle/netconfigops/roles/build_diff/tests/: test.yml
(+6 files in other folders)
