[tool.poetry]
name = "netconfigops-ansible"
version = "0.1.0"
description = "Network Configuration Ops Ansible Collection"
authors = ["ryanmerolle"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
hier-config = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ansible-core = "^2.15"
ansible-lint = "*"
invoke = "*"
mdx_truly_sane_lists = "*"
mike = "*"
mkdocs = "*"
mkdocs-exclude = "*"
mkdocs-git-committers-plugin-2 = "*"
mkdocs-git-revision-date-localized-plugin = "*"
mkdocs-git-revision-date-plugin = "*"
mkdocs-include-dir-to-nav = "*"
mkdocs-material = "*"
mkdocs-material-extensions = "*"
mkdocstrings = "*"
pymdown-extensions = "*"
molecule = "*"
pre-commit = "*"
pytest = "*"
pytest-cov = "*"
ruff = "*"
sourcery = "*"
sourcery-cli = "*"
yamllint = "*"
antsibull = "*"
antsibull-docs = ">= 2.0.0, < 3.0.0"
ansible-pygments = "*"
sphinx = "*"
sphinx-ansible-theme = ">= 0.9.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
